# Zorox

./: .env.example  .replit  DIAGNOSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  NETWORK_RESILIENCE_SOLUTION.py  PROJECT_DOCUMENTATION.md  README.md  SETUP.md  WATERMARK_GUIDE.md  WATERMARK_IMPLEMENTATION.md  bot.db  bot.db.backup  bot_manager.py  check_chat_access.py  command_test_summary.py  config.py  database.py  debug_live_filtering.py  demo.py  diagnostic_test.py  filters.py  fix_summary.md  health_monitor.py  image_handler.py  main.py  message_processor.py  pyproject.toml  quick_test.db.backup  replit.md  session_bot.session  session_bot.session-journal  test.db.backup  test_addpair_fix.py  test_command_updates.py  test_commands.py  test_filtering_fixes.py  test_final_cleaning.py  test_fixes.py  test_flow.db.backup  test_join.db.backup  (+12 more)
attached_assets/: Pasted--Current-Problems-to-Fix-1-Messages-with-URLs-do-not-show-webpage-previews-Even-when-the-messa-1753360523804_1753360523805.txt  Pasted--venv311-ubuntu-ip-172-31-20-60-CodeMedic-python-main-py-Backend-initialization-failed-No-modu-1753438298047_1753438298048.txt  Pasted--venv311-ubuntu-ip-172-31-20-60-CodeMedic-python-main-py-Backend-initialization-failed-No-modu-1753438438442_1753438438444.txt  Pasted-2025-07-24-12-54-29-258-httpx-INFO-HTTP-Request-POST-https-api-telegram-org-bot7763869226-A-1753361700457_1753361700458.txt  Pasted-2025-07-24-13-00-44-001-main-INFO-Starting-Telegram-Bot-System-initialization-2025-07--1753362181471_1753362181472.txt  header_footer_guide.md  main (59)_1753347212816.py  (+9 more)
(+8 files in other folders)
